--- a/WebmontagDemo/Base.lproj/Main.storyboard
+++ b/WebmontagDemo/Base.lproj/Main.storyboard
@@ -29,20 +29,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iEz-YA-MFq">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="252" height="228"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ilU-hU-8zf">
-                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="ilU-hU-8zf" customClass="WMCell" customModule="WebmontagDemo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="252" height="228"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="252" height="228"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tSr-gc-bxj">
+                                            <rect key="frame" x="0.0" y="0.0" width="252" height="228"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcn-3d-shb">
+                                            <rect key="frame" x="0.0" y="103.5" width="252" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="vcn-3d-shb" firstAttribute="width" secondItem="ilU-hU-8zf" secondAttribute="width" id="KBg-9U-Hpq"/>
+                                    <constraint firstItem="vcn-3d-shb" firstAttribute="centerX" secondItem="ilU-hU-8zf" secondAttribute="centerX" id="KrC-Zj-3UT"/>
+                                    <constraint firstItem="vcn-3d-shb" firstAttribute="centerY" secondItem="ilU-hU-8zf" secondAttribute="centerY" id="PLC-TH-05w"/>
+                                    <constraint firstItem="tSr-gc-bxj" firstAttribute="width" secondItem="ilU-hU-8zf" secondAttribute="width" id="Xzc-BM-H66"/>
+                                    <constraint firstItem="tSr-gc-bxj" firstAttribute="centerX" secondItem="ilU-hU-8zf" secondAttribute="centerX" id="lnq-Tu-woj"/>
+                                    <constraint firstItem="tSr-gc-bxj" firstAttribute="height" secondItem="ilU-hU-8zf" secondAttribute="height" id="oXq-fE-3PT"/>
+                                    <constraint firstItem="tSr-gc-bxj" firstAttribute="centerY" secondItem="ilU-hU-8zf" secondAttribute="centerY" id="pAT-fO-aGF"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="backgroundImage" destination="tSr-gc-bxj" id="BoP-OT-LT8"/>
+                                    <outlet property="titleLabel" destination="vcn-3d-shb" id="KSB-EM-9QS"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
